<resources>
    <string name="app_name">MyWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_src">logo</string>
    <string name="create_account">Create Account</string>
    <string name="signup_to_get_started">SignUp to get started!</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="wrong_password">Wring password!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="signin"> <u>SignIn</u></string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up"> <u>Sign up</u></string>
    <string name="show_balance">Show balance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="fab">fab</string>
    <string name="txt_account_balance">Account Balance</string>
    <string name="txt_dummy_amount">Kes 15,000</string>
    <string name="txt_empty_transaction">No transactions available</string>
    <string name="txt_error_first_name">First name is required</string>
    <string name="txt_error_last_name">Last name is required</string>
    <string name="txt_error_email">Email is required</string>
    <string name="txt_error_password">Password is required</string>
    <string name="txt_error_password_match">Password do not match</string>
    <string name="txt_home">Home</string>
    <string name="txt_expenditure">Expenditure</string>
    <string name="txt_profile">Profile</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_expenditure">Add Expenditure</string>
    <string name="expenditure">Expenditure</string>
    <string name="enter_expenditure_description">Enter expenditure description</string>
    <string name="amount_required">Amount field required</string>
    <string name="description_required">Description field required</string>
    <string name="income">Income</string>
    <string name="add_income">Add Income</string>
    <string name="enter_income_description">Enter income description</string>
    <string name="kes_10000">Kes 10000</string>
    <string name="house_shopping">House Shopping</string>
    <string name="kes">Kes </string>
</resources>