<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signIn.ui.SignInFragment">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_in_to_continue"
        android:textColor="#BFBEBE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@id/txt_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/color_primary"
        app:hintTextColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>