<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signUp.ui.SignUpFragment">

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/signup_to_get_started"
        android:textColor="#BFBEBE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/color_primary"
        app:hintTextColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/create_account_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_first_name"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/txt_last_name"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/color_primary"
        app:hintTextColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_last_name"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/txt_email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/color_primary"
        app:hintTextColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/last_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            android:hintTextColor="#757575"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@id/txt_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/color_primary"
        app:hintTextColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/txt_password_confirm"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/color_primary"
        app:hintTextColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>