<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".expenditure.ui.ExpenditureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/expenditure_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/expenditure"
            android:textSize="30sp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/expenditure_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expenditure_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_expenditure"
            android:textSize="15sp"
            android:fontFamily="@font/roboto"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/expenditure_sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:lines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/amount_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:maxLines="5"
                android:gravity="start"
                android:scrollbars="vertical"
                android:hint="@string/enter_expenditure_description"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_layout"
            android:text="@string/submit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/color_secondary"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>